# NRobot

./: .gitignore  .gitmodules  CMakeLists.txt  J.cpp  J.hpp  Makefile  README.md  code_guidelines.txt  nrclip_brkpts.txt  todo.txt
Input Files/: MED16_final.txt  MED16_initial.txt  region_sq2.txt
NPart/: CMakeLists.txt  Makefile  README.md  sdl2-config.cmake  todo.txt
NPart/Input Files/: region_sq.txt
NPart/src/: CMakeLists.txt  TEST_GV.cpp  TEST_NPart.cpp  TEST_YS_uniform_quality.cpp
NPart/src/NPart/: CMakeLists.txt  NPBase.hpp  NPConfig.hpp.in  NPSDL.cpp  NPSDL.hpp  NPart.cpp
docs/: file_formats.md
math/: J.cpp  J.hpp  Jn.c  Jn.cpp  Jn.hpp  Jni.txt  Jnj.txt  MATH_AWGV_jacobians_normals.py  n.cpp
plots/: compare_simulation_results.m  generate_simulation_frames.m  plot_simulation_results.m  plot_simulation_results.m~
publication_sims/: sim_ground_anisotropic_switching.cpp
resources/: YS_ICRA14_initial_XYy.txt  region_cb.txt
src/: CMakeLists.txt  NConfig.hpp.in  NR.hpp  N_Config.hpp.in  TEST.cpp  TEST_NBase.cpp  TEST_NPlot.cpp  TEST_YSUQ_law.cpp  TEST_in_on.cpp
src/NBase/: CMakeLists.txt  NBase.cpp  NBase.hpp  NConfig.hpp.in
src/NPart/: CMakeLists.txt  NClip.cpp  NClip.hpp  NPClip.cpp  NPClip.hpp  NPart.cpp  NPart.hpp  clipper.cpp
src/NPlot/: CMakeLists.txt  NPlot.cpp  NPlot.hpp
src/NRBase/: NRBase.cpp  NRBase.hpp  NRConfig.hpp.in
src/NRPart/: NRClip.cpp  NRClip.hpp  NRPart.cpp  NRPart.hpp  clipper.cpp
src/NRPlot/: NRPlot.cpp  NRPlot.hpp
src/NRobot/: CMakeLists.txt  J.cpp  J.hpp  Jn.cpp  Jn.hpp  NRBase.cpp  NRBase.hpp  NRConfig.hpp.in  NRControl.cpp  NRControl.hpp  NRControl_old.cpp  NRobot.cpp  NRobot.hpp  n.cpp  n.hpp
src/Tests/: TEST_NPlot.cpp  TEST_NRBase.cpp  TEST_NRPart.cpp  TEST_NRPlot.cpp
src/sim/: sim_centroid.cpp  sim_ground.cpp  sim_ground_agents.cpp  sim_ground_agents_anisotropic.cpp  sim_ground_agents_anisotropic_uncertainty.cpp  sim_ground_agents_distance.cpp  sim_ground_anisotropic.cpp  sim_ground_anisotropic_switching.cpp  sim_ground_anisotropic_uncertainty.cpp  sim_ground_anisotropic_uncertainty_switching.cpp  sim_ground_antagonistic.cpp  sim_ground_distance.cpp  sim_ground_dubins.cpp
src/tests/: test_AU_partitioning.cpp  test_AWGV_jacobians_normals.cpp  test_AWGV_jacobians_normals_new.cpp  test_NRBase.cpp  test_NRPart.cpp  test_NRPlot.cpp
