# NRobot src CMakeLists ########################################################

########## Create nrobot library ##########
# Include headers
INCLUDE_DIRECTORIES(NRBase)
INCLUDE_DIRECTORIES(NRPart)
INCLUDE_DIRECTORIES(NRPlot)
INCLUDE_DIRECTORIES(NRobot)

# Source files to compile
SET(NRBASE_SRC "NRBase/NRBase.cpp")
SET(NRPART_SRC "NRPart/clipper.cpp" "NRPart/NRClip.cpp" "NRPart/NRPart.cpp")
SET(NROBOT_SRC "NRobot/NRobot.cpp" "NRobot/Jn.cpp" "NRobot/n.cpp" "NRobot/J.cpp")
IF(NR_PLOT_AVAILABLE)
    SET(NRPLOT_SRC "NRPlot/NRPlot.cpp")
ENDIF(NR_PLOT_AVAILABLE)

# Create static library
ADD_LIBRARY(nrobot STATIC ${NRBASE_SRC} ${NRPART_SRC} ${NROBOT_SRC} ${NRPLOT_SRC})
SET_TARGET_PROPERTIES(nrobot PROPERTIES OUTPUT_NAME nrobot${BUILD_POSTFIX})

# Install library
# Install headers inside NRobot folder
# Install static library in standard folder



########## Create simulation executables ##########
ADD_EXECUTABLE(SIM_GROUND "sim/sim_ground.cpp")
TARGET_LINK_LIBRARIES(SIM_GROUND nrobot ${SDL2_LIBRARIES})
SET_TARGET_PROPERTIES(SIM_GROUND PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
SET_TARGET_PROPERTIES(SIM_GROUND PROPERTIES OUTPUT_NAME sim_ground${BUILD_POSTFIX})

ADD_EXECUTABLE(SIM_GROUND_ANISOTROPIC "sim/sim_ground_anisotropic.cpp")
TARGET_LINK_LIBRARIES(SIM_GROUND_ANISOTROPIC nrobot ${SDL2_LIBRARIES})
SET_TARGET_PROPERTIES(SIM_GROUND_ANISOTROPIC PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
SET_TARGET_PROPERTIES(SIM_GROUND_ANISOTROPIC PROPERTIES OUTPUT_NAME sim_ground_anisotropic${BUILD_POSTFIX})

ADD_EXECUTABLE(SIM_GROUND_AU "sim/sim_ground_anisotropic_uncertainty.cpp")
TARGET_LINK_LIBRARIES(SIM_GROUND_AU nrobot ${SDL2_LIBRARIES})
SET_TARGET_PROPERTIES(SIM_GROUND_AU PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
SET_TARGET_PROPERTIES(SIM_GROUND_AU PROPERTIES OUTPUT_NAME sim_ground_anisotropic_uncertainty${BUILD_POSTFIX})

ADD_EXECUTABLE(SIM_GROUND_AU_SWITCHING "sim/sim_ground_anisotropic_uncertainty_switching.cpp")
TARGET_LINK_LIBRARIES(SIM_GROUND_AU_SWITCHING nrobot ${SDL2_LIBRARIES})
SET_TARGET_PROPERTIES(SIM_GROUND_AU_SWITCHING PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
SET_TARGET_PROPERTIES(SIM_GROUND_AU_SWITCHING PROPERTIES OUTPUT_NAME sim_ground_anisotropic_uncertainty_switching${BUILD_POSTFIX})

ADD_EXECUTABLE(SIM_GROUND_DIST "sim/sim_ground_distance.cpp")
TARGET_LINK_LIBRARIES(SIM_GROUND_DIST nrobot ${SDL2_LIBRARIES})
SET_TARGET_PROPERTIES(SIM_GROUND_DIST PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
SET_TARGET_PROPERTIES(SIM_GROUND_DIST PROPERTIES OUTPUT_NAME sim_ground_distance${BUILD_POSTFIX})



########## Create testing executables ##########
ADD_EXECUTABLE(NRBASE_TEST "tests/test_NRBase.cpp")
TARGET_LINK_LIBRARIES(NRBASE_TEST nrobot ${SDL2_LIBRARIES})
SET_TARGET_PROPERTIES(NRBASE_TEST PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
SET_TARGET_PROPERTIES(NRBASE_TEST PROPERTIES OUTPUT_NAME test_nrbase${BUILD_POSTFIX})

ADD_EXECUTABLE(NRPLOT_TEST "tests/test_NRPlot.cpp")
TARGET_LINK_LIBRARIES(NRPLOT_TEST nrobot ${SDL2_LIBRARIES})
SET_TARGET_PROPERTIES(NRPLOT_TEST PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
SET_TARGET_PROPERTIES(NRPLOT_TEST PROPERTIES OUTPUT_NAME test_nrplot${BUILD_POSTFIX})

ADD_EXECUTABLE(NRPART_TEST "tests/test_NRPart.cpp")
TARGET_LINK_LIBRARIES(NRPART_TEST nrobot ${SDL2_LIBRARIES})
SET_TARGET_PROPERTIES(NRPART_TEST PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
SET_TARGET_PROPERTIES(NRPART_TEST PROPERTIES OUTPUT_NAME test_nrpart${BUILD_POSTFIX})

ADD_EXECUTABLE(NRAWGV_TEST "tests/test_AWGV_jacobians_normals_new.cpp")
TARGET_LINK_LIBRARIES(NRAWGV_TEST nrobot ${SDL2_LIBRARIES})
SET_TARGET_PROPERTIES(NRAWGV_TEST PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
SET_TARGET_PROPERTIES(NRAWGV_TEST PROPERTIES OUTPUT_NAME test_AWGV_jacobians_normals${BUILD_POSTFIX})

ADD_EXECUTABLE(NRAU_TEST "tests/test_AU_partitioning.cpp")
TARGET_LINK_LIBRARIES(NRAU_TEST nrobot ${SDL2_LIBRARIES})
SET_TARGET_PROPERTIES(NRAU_TEST PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
SET_TARGET_PROPERTIES(NRAU_TEST PROPERTIES OUTPUT_NAME test_AU_partitioning${BUILD_POSTFIX})
