# NPart src CMakeLists #########################################################

# Create testing executables
ADD_EXECUTABLE(NP_TEST TEST_NPart.cpp)
ADD_EXECUTABLE(GV_TEST TEST_GV.cpp)
ADD_EXECUTABLE(YSUQ_TEST TEST_YS_uniform_quality.cpp)
ADD_EXECUTABLE(INON_TEST TEST_in_on.cpp)

# NPart and NPSDL
INCLUDE_DIRECTORIES(NPart)
ADD_SUBDIRECTORY(NPart)

# Link the libraries
IF(SDL2_FOUND)
    TARGET_LINK_LIBRARIES(NP_TEST npart npsdl ${SDL2_LIBRARIES})
    TARGET_LINK_LIBRARIES(GV_TEST npart npsdl ${SDL2_LIBRARIES})
    TARGET_LINK_LIBRARIES(YSUQ_TEST npart npsdl ${SDL2_LIBRARIES})
    TARGET_LINK_LIBRARIES(INON_TEST npart npsdl ${SDL2_LIBRARIES})
ELSE(SDL2_FOUND)
    TARGET_LINK_LIBRARIES(NP_TEST npart)
    TARGET_LINK_LIBRARIES(GV_TEST npart)
    TARGET_LINK_LIBRARIES(YSUQ_TEST npart)
    TARGET_LINK_LIBRARIES(INON_TEST npart)
ENDIF(SDL2_FOUND)


# Set executable output directory and postfix
SET_TARGET_PROPERTIES(NP_TEST PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
SET_TARGET_PROPERTIES(NP_TEST PROPERTIES OUTPUT_NAME NP_TEST${BUILD_POSTFIX})
SET_TARGET_PROPERTIES(GV_TEST PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
SET_TARGET_PROPERTIES(GV_TEST PROPERTIES OUTPUT_NAME GV_TEST${BUILD_POSTFIX})
SET_TARGET_PROPERTIES(YSUQ_TEST PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
SET_TARGET_PROPERTIES(YSUQ_TEST PROPERTIES OUTPUT_NAME YSUQ_TEST${BUILD_POSTFIX})
SET_TARGET_PROPERTIES(INON_TEST PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
SET_TARGET_PROPERTIES(INON_TEST PROPERTIES OUTPUT_NAME INON_TEST${BUILD_POSTFIX})
